--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </div>
     <div class="container">
       {{> welcome  }}
+      {{> my-video }}
     </div>
   </div>
 
@@ -19,6 +20,7 @@
     </div>    
     <div class="span7">
       {{> choose_game }}
+      {{> remote-videos }}
       <div id='container' class="span7">
 	{{> alien_invasion}}      
       </div>
@@ -142,6 +144,14 @@
     </div>
   </div>
   
+</template>
+
+<template name="my-video">
+    <video id="localVideo"></video>
+</template>
+
+<template name="remote-videos">
+    <div id="remotesVideos"></div>
 </template>
 
 
